# rasterizer-c

./: .gitignore  CMakeLists.txt  README.md
include/: model.h  screen.h  types.h  utils.h  vector.h
objects/: car.mtl
src/: main.c  model.c  screen.c  types.c  utils.c  vector.c
